Clarify VERBOSE_GC events.